--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,1 +1,11 @@
-<div class="">recipes</div>
+<div class="recipee" >
+    <figure class="recipe_fig">
+        <img [src]="recipeDetails?.image_url" [alt]="recipeDetails?.title" class="recipe_img">
+        <h1 class="recipe?_title">
+            <span>
+                {{recipeDetails!.title}}
+            </span>
+        </h1>
+    </figure>
+   
+</div>
