--- a/src/app/shopping-list/shopping-list.component.css
+++ b/src/app/shopping-list/shopping-list.component.css
@@ -1,9 +1,4 @@
-div{
-    background-color: white;
-    height: 100vh;
-}
-
-div p {
+p {
     color: #b47722;
     font-weight: 500;
     font-size: 1.1rem;
