--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,11 +1,61 @@
-<div class="recipee" >
-    <figure class="recipe_fig">
-        <img [src]="recipeDetails?.image_url" [alt]="recipeDetails?.title" class="recipe_img">
-        <h1 class="recipe?_title">
-            <span>
-                {{recipeDetails!.title}}
-            </span>
-        </h1>
-    </figure>
+<div class="recipee">
+    <!--if truthy, enter the if statement-->
+    @if(recipeDetails) {
+        <figure class="recipe_fig">
+            <img [src]="recipeDetails.image_url" [alt]="recipeDetails.title" class="recipe_img">
+            <h1 class="recipe_title">
+                <span>
+                    {{ recipeDetails.title }}
+                </span>
+            </h1>
+        </figure>
+        <div class="recipe_details">
+            <div class="recipe_info">
+                <i class="recipe_info-icon bi bi-alarm-fill"></i>
+                <span class="recipe_info-data recipe_info-data--minutes">20</span>
+                <span class="recipe_info-text"> Minutes</span>
+            </div>
+            <div class="recipe_info">
+                <i class="recipe_info-icon bi bi-person-standing"></i>
+                <span class="recipe_info-data recipe__info-data--people">4</span>
+                <span class="recipe_info-text"> servings</span>
+            </div>
+            <div class="recipe_info-hidden">
+                <i class="recipe_info-icon bi bi-person-standing"></i>
+                <span class="recipe_info-data recipe__info-data--people">4</span>
+                <span class="recipe_info-text"> servings</span>
+            </div>
+            <div class="">
+                <i class="recipe_love bi bi-suit-heart-fill"></i>
+            </div>
+        </div>
+        <div class="recipe_ingredients">
+            <ul class="recipe_ingredient-list">
+                <!--recipeDetails.ingredients is an array, so we us ngfor to loop through it in the li eelemnt-->
+                <li class="recipe_item" *ngFor="let ingredient of recipeDetails.ingredients">
+                    <i class="recipe_item-icon bi bi-check-circle-fill"></i>
+                    {{ ingredient }}
+                </li>
+                
+            </ul>
+            <button class="btn-small recipe_btn recipe_btn-add">
+                <i class="bi bi-cart3"></i>
+                <!--on click, call the getValue function with the recipeDetails.ingredient array as an arguemnt-->
+                <span (click)=getValue(recipeDetails.ingredients)>Add to shopping list</span>
+            </button>
+        </div>
+        <div class="recipe_directions text-center">
+            <h2 class="heading-2">How to cook it</h2>
+            <p class="recipe_directions-text">
+                This recipe was carefully designed and tested by
+                <span class="recipe_by">101 Cookbooks</span>. Please check out directions at their website.
+            </p>
+            <a class="btn-small recipe_btn" href="http://www.101cookbooks.com/archives/001199.html" target="_blank">
+                <span>Directions</span>
+                <i class="search_icon bi bi-caret-right-fill"></i>
+            </a>
+        </div>
+    }
+   
    
 </div>
